Fix display of all against all.